[package]
name = "khinsider-dl"
version = "0.1.1"
authors = ["Vicente Salcedo vicentepsalcedo@gmail.com"]
license = "file://LICENSE"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
regex = "1.5"
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.19.0"
threadpool = "1.8.1"
url = "2.2"